Fixed : Footer fill would overflow.

--- a/src/scss/02_Layout/01_Outline.scss
+++ b/src/scss/02_Layout/01_Outline.scss
@@ -191,6 +191,17 @@
 }
 /* //_}^+mobileOnly */
 
+/* #lB > .lX の際に footer の塗りがはみ出さないようにする  */
+.lX {
+    /* //_{@ie8,@ie9,@modern */
+    overflow : hidden; /* この指定が無いと塗りがはみ出る */
+    /* //_}@ie8,@ie9,@modern */
+    /* //_{@ie5win */
+    width      : 100%; /* この指定が無いと横スクロールが出る  */
+    overflow-x : hidden;
+    /* //_}@ie5win */
+}
+
 /* //_{+mobileOnly
 --------------------------------------------------------------------------------------*/
     .lW {
